FixUp methods